err/v1pysdk-unofficial.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/extras'...
Listing './lib/python3.5/site-packages/extras/tests'...
Listing './lib/python3.5/site-packages/extras-1.0.0.dist-info'...
Listing './lib/python3.5/site-packages/fixtures'...
Listing './lib/python3.5/site-packages/fixtures/_fixtures'...
Listing './lib/python3.5/site-packages/fixtures/tests'...
Listing './lib/python3.5/site-packages/fixtures/tests/_fixtures'...
Listing './lib/python3.5/site-packages/fixtures-3.0.0.dist-info'...
Listing './lib/python3.5/site-packages/iso8601'...
Listing './lib/python3.5/site-packages/iso8601-0.1.12.dist-info'...
Listing './lib/python3.5/site-packages/linecache2'...
Listing './lib/python3.5/site-packages/linecache2/tests'...
Listing './lib/python3.5/site-packages/linecache2-1.0.0.dist-info'...
Listing './lib/python3.5/site-packages/ntlm'...
Compiling './lib/python3.5/site-packages/ntlm/HTTPNtlmAuthHandler.py'...
***   File "./lib/python3.5/site-packages/ntlm/HTTPNtlmAuthHandler.py", line 110
    except socket.error, err:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ntlm/U32.py'...
***   File "./lib/python3.5/site-packages/ntlm/U32.py", line 18
    C = 0x1000000000L
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ntlm/des_c.py'...
***   File "./lib/python3.5/site-packages/ntlm/des_c.py", line 208
    r, l, t = PERM_OP((r, l, t),  4, U32(0x0f0f0f0fL))
                                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ntlm/des_data.py'...
***   File "./lib/python3.5/site-packages/ntlm/des_data.py", line 25
    U32(0x00820200L), U32(0x00020000L), U32(0x80800000L), U32(0x80820200L),
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ntlm/ntlm.py'...
***   File "./lib/python3.5/site-packages/ntlm/ntlm.py", line 112
    print "NTLM_NegotiateUnicode set"
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc/source'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-3.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_mimeparse-1.6.0.dist-info'...
Listing './lib/python3.5/site-packages/python_ntlm-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/testtools'...
Compiling './lib/python3.5/site-packages/testtools/_compat2x.py'...
***   File "./lib/python3.5/site-packages/testtools/_compat2x.py", line 16
    raise exc_class, exc_obj, exc_tb
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/testtools/matchers'...
Listing './lib/python3.5/site-packages/testtools/testresult'...
Listing './lib/python3.5/site-packages/testtools/tests'...
Listing './lib/python3.5/site-packages/testtools/tests/matchers'...
Listing './lib/python3.5/site-packages/testtools/tests/twistedsupport'...
Listing './lib/python3.5/site-packages/testtools/twistedsupport'...
Listing './lib/python3.5/site-packages/testtools-2.3.0.dist-info'...
Listing './lib/python3.5/site-packages/traceback2'...
Listing './lib/python3.5/site-packages/traceback2/tests'...
Listing './lib/python3.5/site-packages/traceback2-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/unittest2'...
Listing './lib/python3.5/site-packages/unittest2/test'...
Listing './lib/python3.5/site-packages/unittest2-1.1.0.dist-info'...
Listing './lib/python3.5/site-packages/v1pysdk'...
Compiling './lib/python3.5/site-packages/v1pysdk/client.py'...
***   File "./lib/python3.5/site-packages/v1pysdk/client.py", line 137
    except HTTPError, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/v1pysdk/v1meta.py'...
***   File "./lib/python3.5/site-packages/v1pysdk/v1meta.py", line 91
    except V1Error, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/v1pysdk/yamlquery.py'...
***   File "./lib/python3.5/site-packages/v1pysdk/yamlquery.py", line 90
    print query_from_yaml(code)
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/v1pysdk_unofficial-0.4.post4.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
